[package]
name = "talos-unlockr"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = { version = "^0.14", features =["tls-ring"] }
prost = "^0.14.1"
tokio = { version = "^1.47", features = ["macros", "rt-multi-thread", "signal"] }
tokio-util = { version = "^0.7.16" }
aead = { version = "^0.5.0", features = ["std"] }
chacha20poly1305 = "^0.10.0"
argon2 = { version = "^0.5.0", features = ["std"] }
nix = { version = "^0.30.1", features = ["net"] }
futures = "^0.3.31"
futures-util = "^0.3.31"
typenum = "^1.18.0"
clap = { version = "^4.5.46", features = ["derive"] }
password-hash = { version = "^0.5.0" }
anyhow = "^1.0.99"
log = { version = "^0.4.28", features = ["kv", "kv_std"] }
env_logger = { version = "^0.11.8", features = ["unstable-kv"] }
uuid = "1.18.0"
libsystemd = "0.7.2"
tonic-prost = "^0.14.1"

[build-dependencies]
tonic-prost-build = "^0.14.1"
