[package]
name = "talos-unlockr"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = { version = "^0.14", features = ["tls-ring"] }
prost = "^0.14.1"
tokio = { version = "^1.48", features = ["macros", "rt-multi-thread", "signal"] }
tokio-util = { version = "^0.7.17", features = ["rt"] }
aead = { version = "^0.5.0", features = ["std"] }
chacha20poly1305 = "^0.10.0"
argon2 = { version = "^0.5.0", features = ["std"] }
nix = { version = "^0.30.1", features = ["net"] }
futures = "^0.3.31"
futures-util = "^0.3.31"
typenum = "^1.19.0"
clap = { version = "^4.5.53", features = ["derive"] }
password-hash = { version = "^0.5.0" }
anyhow = "^1.0.100"
log = { version = "^0.4.29", features = ["kv", "kv_std"] }
env_logger = { version = "^0.11.8", features = ["unstable-kv"] }
uuid = { version = "1.19.0", features = ["serde"] }
libsystemd = "0.7.2"
tonic-prost = "^0.14.2"
teloxide = { version = "^0.17.0", default-features = false, features = ["ctrlc_handler", "rustls", "macros"] }
serde = "1.0.219"
serde_json = "1.0.149"

[dependencies.reqwest]
version = "*"
default-features = false
# reqwest is biased towards native-tls and then towards rustls + ring but we
# want the rustls default of aws-lc-rs
features = ["http2", "charset", "system-proxy", "rustls-tls-native-roots-no-provider"]

[build-dependencies]
tonic-prost-build = "^0.14.2"
